--- a/combateCartas/src/app/partida/partida.component.html
+++ b/combateCartas/src/app/partida/partida.component.html
@@ -1,3 +1,31 @@
-<p>
-  partida works!
-</p>
+<ion-content>
+  <ion-grid>
+
+    <ion-row>
+      <ion-col size="6">
+        <ion-button>AAA</ion-button>
+        <ion-button>EEE</ion-button>
+        <br>
+        <ion-button>VVV</ion-button>
+        <ion-button>CCC</ion-button>
+      </ion-col>
+      <ion-col size="6">
+        <h2>aaaaaaaaaaaaaaaaaaa</h2>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size="6">
+        <img src="assets/juga.jpg" alt="jugador">
+      </ion-col>
+      <ion-col size="6">
+        <ion-button>AAA</ion-button>
+        <ion-button>EEE</ion-button>
+        <br>
+        <ion-button>VVV</ion-button>
+        <ion-button>CCC</ion-button>
+      </ion-col>
+    </ion-row>
+
+  </ion-grid>
+</ion-content>
