fondo casi hecho

--- a/combateCartas/src/app/partida/partida.component.html
+++ b/combateCartas/src/app/partida/partida.component.html
@@ -1,11 +1,16 @@
 <ion-content>
   <!-- <ion-img src="assets/fondos/fondoPreguntas.png"></ion-img> -->
 
-  lol
 
-  <ion-img class="persona" src="assets/fondos/jugaSilueta.png"></ion-img>
-  <div style="margin-top: calc((100% / 90) * 160);">
-    <ion-grid style="/*margin-top: 15%;*/ max-width: 80%">
+  <ion-img class="position-fixed bottom-0 w-100" src="assets/fondos/suelo1.png"></ion-img>
+
+  <div class="position-relative">
+    <ion-img class="persona position-absolute top-50 start-50 translate-middle" src="assets/fondos/jugaSilueta.png" ></ion-img>
+  </div>
+
+  <div class="position-fixed bottom-0 w-100">
+
+    <ion-grid style="/*margin-top: 15%;*/ max-width: 80%;" class="fondoPanel">
 
       <!-- ************( Parte de Arriba )************ -->
       <ion-row>
@@ -57,4 +62,5 @@
 
     </ion-grid>
   </div>
+
 </ion-content>
