--- a/combateCartas/src/app/partida/partida.component.scss
+++ b/combateCartas/src/app/partida/partida.component.scss
@@ -3,6 +3,13 @@ ion-content
   --background: url('../../assets/fondos/fondoPreguntas.png') no-repeat center center / cover;
 }
 
+.fondoPanel
+{
+  --background: url('../../assets/fondos/panelBTN.png') no-repeat center center / cover;
+  background: url('../../assets/fondos/panelBTN.png') no-repeat center center / cover;
+}
+
+
 .persona
 {
   min-width: 100px;
