--- a/combateCartas/src/app/partida/partida.component.scss
+++ b/combateCartas/src/app/partida/partida.component.scss
@@ -26,3 +26,25 @@ ion-content
   min-height: 40px;
   max-height: 60px;
 }
+
+
+// Boostrap no da
+.w-60
+{
+   width: 60%;
+}
+
+.w-70
+{
+  width: 70%;
+}
+
+.w-80
+{
+   width: 80%;
+}
+
+.w-90
+{
+   width: 90%;
+}
