casi todo la partida hecha

--- a/combateCartas/src/app/partida/partida.component.html
+++ b/combateCartas/src/app/partida/partida.component.html
@@ -24,7 +24,9 @@
     <!---------( Bocadillos Pregunta )---------->
     <ion-row class="filas">
       <ion-col>
-        <h2>{{ _pregunta_s }}</h2>
+        <div class="divBocadillos">
+          <h2>{{ _pregunta_s }}</h2>
+        </div>
       </ion-col>
     </ion-row>
 
