Poner nombre. Poner pregunta. Poner comprobacion. Poner nueva-pregunta.

--- a/combateCartas/src/app/partida/partida.component.html
+++ b/combateCartas/src/app/partida/partida.component.html
@@ -40,11 +40,17 @@
 
 
     <!---------( Panel Usuario )---------->
+    <!--
+    - Poner nombre.
+    - Poner pregunta.
+    - Poner comprobacion.
+    - Poner nueva-pregunta.
+    -->
     <ion-row class="filas">
       <ion-col>
 
         <div > <!-- class="position-fixed bottom-0 w-100" -->
-          <ion-grid style="/*margin-top: 15%;*/ /*max-width: 80%;*/" class="fondoPanel p-4">
+          <ion-grid style="/*margin-top: 15%;*/ /*max-width: 80%;*/" class="fondoPanel p-4 w-80">
 
             <!-- ************( Parte de Arriba )************ -->
             <ion-row>
