--- a/combateCartas/src/app/partida/partida.component.html
+++ b/combateCartas/src/app/partida/partida.component.html
@@ -49,70 +49,14 @@
     <ion-row class="filas">
       <ion-col>
 
-        <div > <!-- class="position-fixed bottom-0 w-100" -->
-          <ion-grid style="/*margin-top: 15%;*/ /*max-width: 80%;*/" class="fondoPanel p-4 w-80">
-
-            <!-- ************( Parte de Arriba )************ -->
-            <ion-row>
-              <ion-col size="6">
-                <div>
-                  <h2>Nombre del usuario</h2>
-                </div>
-                <div>
-                  <h2>Cantidad de preguntas respondidas</h2>
-                </div>
-              </ion-col>
-              <ion-col size="6">
-                <div class="d-flex justify-content-between">
-                  <h2 class="d-flex justify-content-start">Tiempo Restante:</h2>
-                  <p class="d-flex justify-content-end align-items-end mb-0">{{_tiempo_i}}/15</p>
-                </div>
-                <ion-progress-bar [value]="_tiempo_i / 15"></ion-progress-bar>
-              </ion-col>
-            </ion-row>
-
-
-            <!-- ************( Parte de Abajo )************ -->
-            <ion-row>
-
-              <ion-col size="6">
-
-                <div class="d-flex justify-content-between">
-                  <h2 class="d-flex justify-content-start">Vida Restante:</h2>
-                  <p class="d-flex justify-content-end align-items-end mb-0">{{_vida_i}}/100</p>
-                </div>
-                <ion-progress-bar [value]="_vida_i / 100"></ion-progress-bar>
-
-              </ion-col>
-
-              <!-- Botones Respuesta -->
-              <ion-col size="6">
-                <ion-row>
-                  <ion-col size="6">
-                    <ion-button class="btn btn-primaty w-100" (click)=responderPregunta(0)>{{ _respuesta1_s }}</ion-button>
-                  </ion-col>
-                  <ion-col size="6">
-                    <ion-button class="btn btn-primaty w-100" (click)=responderPregunta(1)>{{ _respuesta2_s }}</ion-button>
-                  </ion-col>
-                </ion-row>
-
-                <ion-row>
-                  <ion-col size="6">
-                    <ion-button class="btn btn-primaty w-100" (click)=responderPregunta(2)>{{ _respuesta3_s }}</ion-button>
-                  </ion-col>
-                  <ion-col size="6">
-                    <ion-button class="btn btn-primaty w-100" (click)=responderPregunta(3)>{{ _respuesta4_s }}</ion-button>
-                  </ion-col>
-                </ion-row>
-              </ion-col>
-
-            </ion-row>
-
-          </ion-grid>
-        </div>
+        <app-nombre *ngIf="_estadoPartida === _MaquinaEstados.NOMBRE"></app-nombre>
+        <app-pregunta *ngIf="_estadoPartida === _MaquinaEstados.RESPONDIENDO"></app-pregunta>
+        <app-comprobacion *ngIf="_estadoPartida === _MaquinaEstados.COMPROBANDO"></app-comprobacion>
+        <app-nueva-pregunta *ngIf="_estadoPartida === _MaquinaEstados.NUEVA"></app-nueva-pregunta>
 
       </ion-col>
     </ion-row>
-  </ion-grid>
 
+
+  </ion-grid>
 </ion-content>
