--- a/combateCartas/src/global.scss
+++ b/combateCartas/src/global.scss
@@ -35,3 +35,12 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import '@ionic/angular/css/palettes/dark.system.css';
+
+
+
+.fondoPanel
+{
+  --background: url('assets/fondos/panelBTN.png') no-repeat center center / cover;
+  background: url('assets/fondos/panelBTN.png') no-repeat center center / cover;
+}
+
