--- a/combateCartas/src/app/partida/partida.component.scss
+++ b/combateCartas/src/app/partida/partida.component.scss
@@ -30,7 +30,8 @@ ion-content
 {
   background-color: #ffede4;
 
-  margin: 0.5rem 2rem 0.5rem 2rem;
+  margin: 2rem 5rem 2rem 5rem;
+  padding: 1.5rem;
 
   min-height: 80%;
   border-radius: 2rem;
@@ -44,8 +45,8 @@ ion-content
 
 .filas
 {
-  min-height: 30%;
-  max-height: 30%;
+  min-height: 31%;
+  max-height: 33%;
 }
 
 .btnRespuesta
