--- a/combateCartas/src/global.scss
+++ b/combateCartas/src/global.scss
@@ -36,11 +36,22 @@
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import '@ionic/angular/css/palettes/dark.system.css';
 
+:root
+{
+  --color1: #1d2f72; // Bode Panel.
+  --color2: #3149a5; // Fondo Panel / Gente Oscura.
+  --color3: #0030e1; // Suelo Plato.
+  --color4: #5e80ff; // Borde Plato.
+  --color6: #4265e6; // Gente Clara.
+}
 
 
 .fondoPanel
 {
-  --background: url('assets/fondos/panelBTN.png') no-repeat center center / cover;
-  background: url('assets/fondos/panelBTN.png') no-repeat center center / cover;
+  //--background: url('assets/fondos/panelBTN.png') no-repeat center center / cover;
+  //background: url('assets/fondos/panelBTN.png') no-repeat center center / cover;
+
+  border: var(--color1) 15px solid;
+  background: var(--color2);
 }
 
