--- a/combateCartas/src/app/comprobacion/comprobacion.component.html
+++ b/combateCartas/src/app/comprobacion/comprobacion.component.html
@@ -1,3 +1,40 @@
-<p>
-  comprobacion works!
-</p>
+
+<!-- ************( Parte de Arriba )************ -->
+<ion-row>
+
+  <ion-col size="6">
+    <div>
+      <h2>{{ _nombre_s }}</h2>
+    </div>
+    <div>
+      <h2>Preguntas respondidas correctamente: {{_cantidad_i}}</h2>
+    </div>
+  </ion-col>
+
+  <ion-col size="6">
+    <div class="d-flex justify-content-between">
+      <h2 class="d-flex justify-content-start">Vida Restante:</h2>
+      <p class="d-flex justify-content-end align-items-end mb-0">{{_vida_i}}/100</p>
+    </div>
+    <ion-progress-bar [value]="_vida_i / 100"></ion-progress-bar>
+  </ion-col>
+
+</ion-row>
+
+
+<!-- ************( Parte de Abajo )************ -->
+<ion-row>
+
+  <ion-col size="3">
+
+    <h2></h2>
+
+  </ion-col>
+  <ion-col size="3">
+
+    <ion-button class="w-100 text-white" (click)="continuar()"><b>Continuar</b></ion-button>
+
+  </ion-col>
+
+</ion-row>
+
