--- a/combateCartas/src/app/partida/partida.component.scss
+++ b/combateCartas/src/app/partida/partida.component.scss
@@ -30,8 +30,8 @@ ion-content
 {
   background-color: #ffede4;
 
-  margin: 2rem 5rem 2rem 5rem;
-  padding: 1.5rem;
+  margin: 1rem 5rem 0 5rem;
+  padding: 1rem;
 
   min-height: 80%;
   border-radius: 2rem;
