--- a/combateCartas/src/app/comprobacion/comprobacion.component.html
+++ b/combateCartas/src/app/comprobacion/comprobacion.component.html
@@ -2,13 +2,8 @@
 <!-- ************( Parte de Arriba )************ -->
 <ion-row>
 
-  <ion-col size="6">
-    <div>
-      <h2>{{ _nombre_s }}</h2>
-    </div>
-    <div>
-      <h2>Preguntas respondidas correctamente: {{_cantidad_i}}</h2>
-    </div>
+  <ion-col size="6" class="d-flex ion-justify-content-center">
+    <h4>{{ _nombre_s }} => tienes correctas: {{ _cantidad_i }}</h4>
   </ion-col>
 
   <ion-col size="6">
@@ -25,15 +20,12 @@
 <!-- ************( Parte de Abajo )************ -->
 <ion-row>
 
-  <ion-col size="3">
-
-    <h2></h2>
-
+  <ion-col size="6" class="d-flex ion-justify-content-center">
+    <h2 class="{{ _css_s }}"><b>{{ _mensaje_s }}</b></h2>
   </ion-col>
-  <ion-col size="3">
 
+  <ion-col size="6">
     <ion-button class="w-100 text-white" (click)="continuar()"><b>Continuar</b></ion-button>
-
   </ion-col>
 
 </ion-row>
