--- a/combateCartas/src/app/nombre/nombre.component.html
+++ b/combateCartas/src/app/nombre/nombre.component.html
@@ -1,14 +1,21 @@
-<ion-row class="d-flex ion-justify-content-center my-3">
-  <ion-col size="3">
+<ion-row class="d-flex ion-justify-content-center">
 
+  <ion-col size="10" class="d-flex ion-justify-content-center">
+    <h3>Introduce tu nombre que los demás jugadores van a ver</h3>
+  </ion-col>
+
+</ion-row>
+
+<ion-row class="d-flex ion-justify-content-center">
+
+  <ion-col size="3">
     <ion-input type="text" placeholder="Nombre:" class="input" [(ngModel)]="_nombre"></ion-input>
-
   </ion-col>
+
   <ion-col size="3">
-
     <ion-button class="w-100 text-white" (click)="empezar()"><b>Empezar</b></ion-button>
-
   </ion-col>
+
 </ion-row>
 
 
