--- a/combateCartas/src/app/pregunta/pregunta.component.html
+++ b/combateCartas/src/app/pregunta/pregunta.component.html
@@ -2,18 +2,13 @@
 <!-- ************( Parte de Arriba )************ -->
 <ion-row>
 
-  <ion-col size="6">
-    <div>
-      <h2>{{ _nombre_s }}</h2>
-    </div>
-    <div>
-      <h2>Preguntas respondidas correctamente: {{ _cantidad_i }}</h2>
-    </div>
+  <ion-col size="6" class="d-flex ion-justify-content-center">
+    <h4>{{ _nombre_s }} => tienes correctas: {{ _cantidad_i }}</h4>
   </ion-col>
 
   <ion-col size="6">
     <div class="d-flex justify-content-between">
-      <h2 class="d-flex justify-content-start">Vida Restante:</h2>
+      <h3 class="d-flex justify-content-start">Vida Restante:</h3>
       <p class="d-flex justify-content-end align-items-end mb-0">{{_vida_i}}/100</p>
     </div>
     <ion-progress-bar [value]="_vida_i / 100"></ion-progress-bar>
@@ -27,10 +22,10 @@
 
   <ion-col size="6">
     <div class="d-flex justify-content-between">
-      <h2 class="d-flex justify-content-start">Tiempo Restante:</h2>
-      <p class="d-flex justify-content-end align-items-end mb-0">{{_tiempo_i}}/15</p>
+      <h3 class="d-flex justify-content-start">Tiempo Restante:</h3>
+      <p class="d-flex justify-content-end align-items-end mb-0">{{_tiempo_i}}/{{_maxTiempo_i}}</p>
     </div>
-    <ion-progress-bar [value]="_tiempo_i / 15"></ion-progress-bar>
+    <ion-progress-bar [value]="_tiempo_i / _maxTiempo_i"></ion-progress-bar>
   </ion-col>
 
   <!-- Botones Respuesta -->
