siluetagnomo, comprobacion tiempo, centrar panel

--- a/combateCartas/src/app/nombre/nombre.component.html
+++ b/combateCartas/src/app/nombre/nombre.component.html
@@ -1,4 +1,4 @@
-<ion-row class="d-flex ion-justify-content-center">
+<ion-row class="d-flex justify-content-center">
 
   <ion-col size="10" class="d-flex ion-justify-content-center">
     <h3>Introduce tu nombre que los demás jugadores van a ver</h3>
