--- a/combateCartas/src/global.scss
+++ b/combateCartas/src/global.scss
@@ -55,3 +55,26 @@
   background: var(--color2);
 }
 
+
+
+
+// Boostrap no da
+.w-60
+{
+  width: 60%;
+}
+
+.w-70
+{
+  width: 70%;
+}
+
+.w-80
+{
+  width: 80%;
+}
+
+.w-90
+{
+  width: 90%;
+}
