--- a/combateCartas/src/app/comprobacion/comprobacion.component.html
+++ b/combateCartas/src/app/comprobacion/comprobacion.component.html
@@ -24,8 +24,8 @@
     <h2 class="{{ _css_s }}"><b>{{ _mensaje_s }}</b></h2>
   </ion-col>
 
-  <ion-col size="6">
-    <ion-button class="w-100 text-white" (click)="continuar()"><b>Continuar</b></ion-button>
+  <ion-col size="6" class="d-flex ion-justify-content-center">
+    <ion-button class="w-50 h-100 text-white" (click)="continuar()"><b>Continuar</b></ion-button>
   </ion-col>
 
 </ion-row>
