--- a/combateCartas/src/app/partida/partida.component.html
+++ b/combateCartas/src/app/partida/partida.component.html
@@ -3,6 +3,7 @@
 
 
   <ion-img class="position-fixed bottom-0 w-100" src="assets/fondos/suelo1.png"></ion-img>
+  <ion-img class="position-fixed bottom-0 w-100 pilar" src="assets/fondos/pilar.png"></ion-img>
 
   <!--
   <div class="w-100" style="padding-left: 30%;">
